--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@ index.html
     <link href="styles/style.css" rel="stylesheet">
     <cd>Desktop/web-projects</cd>
     <git>init</git>
+    git add --all
+git commit -m 'another commit'
+git push
   </head>
   <body>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
