--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
-index.html
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
+    <meta charset="utf-8">
+    <title>Shiny clean</title>
     <link href="styles/style.css" rel="stylesheet">
     <cd>Desktop/web-projects</cd>
     <git>init</git>
-    git add --all
-git commit -m 'another commit'
-git push
   </head>
   <body>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -18,6 +16,7 @@ git push
   <p>Предлагаме различни видове почистващи услуги.</p>
   <p>Основно почистване на жилище или къща; почистване след ремонт; абонаментно почистване;</p>  
   <p>Допълнителни услуги - миене на прозорци и дограма; гладене; пране</p> 
+  <a href="https://www.domestina.bg" title="Почистващи услуги">Почистващи услуги.</a>
   <button>Change user</button>
   <script src="scripts/main.js"></script> 
 </body>
